# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2015 University of California, Davis
#
# See COPYING for license information.
#
# ----------------------------------------------------------------------
#

# Include files in templates in spatialdata source distribution.
EXTRA_DIST = \
	Makefile.am \
	README \
	spatialdb/README \
	spatialdb/configure.ac \
	spatialdb/Makefile.am \
	spatialdb/UniformVelModel.hh \
	spatialdb/UniformVelModel.cc \
	spatialdb/UniformVelModel.i \
	spatialdb/spatialdbcontrib.i \
	spatialdb/__init__.py \
	spatialdb/UniformVelModel.py \
	spatialdb/tests/Makefile.am \
	spatialdb/tests/testcontrib.py \
	spatialdb/tests/TestUniformVelModel.py \
	spatialdb/m4/ac_pkg_swig.m4 \
	spatialdb/m4/cit_numpy.m4 \
	spatialdb/m4/cit_python.m4

# End of file 
