# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

subpackage = geocoords
include $(top_srcdir)/subpackage.am

subpkgpyexec_PYTHON = \
	CoordSys.py \
	CSCart.py \
	CSGeo.py \
	CSGeoLocalCart.py \
	CSGeoProj.py \
	Converter.py \
	Projector.py \
	__init__.py

# version
# $Id$

# End of file 
