# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

subpackage = spatialdb
include $(top_srcdir)/subpackage.am

SUBDIRS = generator

subpkgpyexec_PYTHON = \
	SpatialDB.py \
	SimpleDB.py \
	SimpleIO.py \
	SimpleIOAscii.py \
	__init__.py

# version
# $Id$

# End of file 
