# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

subpackage = utils
include $(top_srcdir)/subpackage.am

subpkgpyexec_PYTHON = \
	__init__.py \
	ChangeCoordSys.py \
	ConvertApp.py \
	CppData.py \
	PointsStream.py

# version
# $Id$

# End of file 
